force-app/main/default/objects/ffr__InquiryTemplateSortItem__c/ffr__InquiryTemplateSortItem__c.object-meta.xml
<CustomObject>
    <description>Stores the default sorting and grouping options for the display in action views.</description>
    <label>Action View Template Sort Item</label>
    <nameField>
        <displayFormat>ITSI-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Sort Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>