force-app/main/default/objects/ffr__InquiryTemplateSortItem__c/fields/ffr__GroupBy__c.field-meta.xml
<CustomField>
    <fullName>ffr__GroupBy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group By</label>
    <type>Checkbox</type>
</CustomField>