force-app/main/default/objects/ffr__InquiryTemplateSortItem__c/fields/ffr__HideDetails__c.field-meta.xml
<CustomField>
    <fullName>ffr__HideDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Details</label>
    <type>Checkbox</type>
</CustomField>