force-app/main/default/objects/ffr__InquiryTemplateSortItem__c/fields/ffr__InquiryTemplate__c.field-meta.xml
<CustomField>
    <fullName>ffr__InquiryTemplate__c</fullName>
    <label>Action View Template</label>
    <referenceTo>ffr__InquiryTemplate__c</referenceTo>
    <relationshipLabel>Action View Template Sort Items</relationshipLabel>
    <relationshipName>InquiryTemplateSortItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>