force-app/main/default/objects/ffr__InquiryTemplateSortItem__c/fields/ffr__InquiryTemplateColumn__c.field-meta.xml
<CustomField>
    <fullName>ffr__InquiryTemplateColumn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action View Template Column</label>
    <referenceTo>ffr__InquiryTemplateColumn__c</referenceTo>
    <relationshipLabel>Action View Template Sort Items</relationshipLabel>
    <relationshipName>InquiryTemplateSortItems</relationshipName>
    <type>Lookup</type>
</CustomField>