force-app/main/default/objects/ffr__InquiryTemplateSortItem__c/fields/ffr__Order__c.field-meta.xml
<CustomField>
    <fullName>ffr__Order__c</fullName>
    <label>Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
                <default>true</default>
                <label>ASC</label>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>